--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,6 @@
-deploy.ant.properties.file=C:\\Users\\X\\AppData\\Roaming\\NetBeans\\8.2\\tomcat80.properties
+deploy.ant.properties.file=C:\\Users\\Ineza\\AppData\\Roaming\\NetBeans\\8.2\\tomcat90.properties
 j2ee.server.domain=C:/Users/X/AppData/Roaming/NetBeans/8.2/apache-tomcat-8.0.27.0_base
-j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
-j2ee.server.instance=tomcat80:home=C:\\Program Files\\Apache Software Foundation\\Apache Tomcat 8.0.27:base=apache-tomcat-8.0.27.0_base
+j2ee.server.home=D:/apache-tomcat-9.0.41-windows-x64/apache-tomcat-9.0.41
+j2ee.server.instance=tomcat90:home=D:\\apache-tomcat-9.0.41-windows-x64\\apache-tomcat-9.0.41
 selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
-user.properties.file=C:\\Users\\X\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Ineza\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
